Fix What's New 140's introduction paragraph not showing up in reader view.

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -77,7 +77,7 @@ main {
     min-height: var(--canvas-height);
 
 
-    .header {
+    .header, .introduction {
       display: flex;
       flex-direction: column;
       align-items: center;
